tests/machine/x/ocaml/map_nested_assign.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/map_nested_assign.ml", line 39, characters 145-150:
39 |   data := (let rec __upd l = match l with | [] -> [("outer",2)] | (k,v)::tl -> if k = "outer" then ("outer",2)::tl else (k,v)::__upd tl in __upd !data);
                                                                                                                                                      ^^^^^
Error: This expression has type (string * (string * int) list) list
       but an expression was expected of type (string * int) list
       Type (string * int) list is not compatible with type int 


Context (around line 39):
  37 | 
  38 | let () =
  39 |   data := (let rec __upd l = match l with | [] -> [("outer",2)] | (k,v)::tl -> if k = "outer" then ("outer",2)::tl else (k,v)::__upd tl in __upd !data);
  40 |   print_endline (__show (List.assoc "inner" List.assoc "outer" (!data)));
  41 | 
